--- a/.github/workflows/scheduledflow.yml
+++ b/.github/workflows/scheduledflow.yml
@@ -1,4 +1,4 @@
-name: lighthouse-main
+name: manual-scheduled-main
 on:
   schedule:
     - cron: '*/5 * * * *'
@@ -7,7 +7,6 @@ jobs:
   lighthouse:
     runs-on: ubuntu-latest
     steps:
-      # - uses: ./.github/actions/lighthouse
       - name: echo something
         run: |
             echo hello world
